# emergency-alerts

./: README.md  io.github.leolost.emergencyalerts.yml  io.github.leolost2605.emergency-alerts-adwaita.yml  io.github.leolost2605.emergency-alerts-devel.yml  io.github.leolost2605.emergency-alerts-elementary.yml  io.github.leolost2605.emergency-alerts.yml  io.github.leolost2605.emergencyalerts-adwaita.yml  io.github.leolost2605.emergencyalerts.yml  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
data/: Application.css  desktop.in  emergencyalerts.appdata.xml.in  emergencyalerts.desktop.in  emergencyalerts.gresource.xml  emergencyalerts.gschema.xml  gresource.xml  gschema.xml  io.github.leolost2605.emergency-alerts.appdata.xml.in  io.github.leolost2605.emergency-alerts.desktop.in  io.github.leolost2605.emergency-alerts.metainfo.xml.in  meson.build
po/: LINGUAS  POTFILES  es.po  io.github.leolost2605.emergency-alerts.pot  it.po  meson.build  uk.po
src/: Application.vala  Config.vala.in  DashboardPage.vala  LocationBox.vala  LocationSearchPage.vala  MapPage.vala  SubscriptionBox.vala  WarningLayer.vala  WarningPage.vala  Window.vala  meson.build
src/Model/: Client.vala  IconCache.vala  Location.vala  LocationSearch.vala  LocationsManager.vala  Provider.vala  RefreshManager.vala  Utils.vala  Warning.vala
src/Model/Geometry/: Area.vala  Coordinate.vala  MultiPolygon.vala  Polygon.vala
src/Model/Location/: CurrentLocation.vala  Database.vala  FixedLocation.vala  Location.vala  LocationManager.vala  LocationSearch.vala  LocationsManager.vala
src/Model/Provider/: Provider.vala  ProviderManager.vala  Warning.vala  WarningAggregator.vala
src/Model/Provider/Implementations/: Germany.vala  USWeather.vala  Ukraine.vala
src/Model/Providers/: Germany.vala
src/Model/Subscription/: Database.vala  LocationFilter.vala  Subscription.vala  SubscriptionManager.vala
src/Model/Utils/: CAP.vala  CountryCode.vala  GeoJSON.vala  IconCache.vala  Log.vala  ProviderTemplate.vala  Utils.vala
src/UI/: WarningChooserDialog.vala  WarningPage.vala  Window.vala
src/UI/AddLocationDialog/: AddLocationDialog.vala  LocationSearchPage.vala
src/UI/HomePage/: HomePage.vala
src/UI/HomePage/DashboardPage/: DashboardPage.vala  SubscriptionBox.vala
src/UI/HomePage/MapPage/: MapPage.vala  MultiPolygonLayer.vala  WarningLayer.vala
src/UI/LocationSearchPage/: LocationRow.vala  LocationSearchPage.vala
src/UI/Widgets/: ErrorDialog.vala  WarningRow.vala
tests/: TestCase.vala  meson.build
tests/Model/: Main.vala  SubscriptionTest.vala  meson.build
